Fix scrollbar style for webkit

--- a/css/style.css
+++ b/css/style.css
@@ -444,3 +444,24 @@ input.jscolor {
     padding: 2px 7px;
     text-align: left;
 }
+
+/*    scrollbar     */
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
